Added a Github page for live demos ✌️

--- a/examples/src/index.html
+++ b/examples/src/index.html
@@ -3,11 +3,12 @@
         <title>🦞 Modali Demo</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     </head>
     <body>
         <noscript>
             You need to enable JavaScript to run this app.
         </noscript>
-    <div id="root"></div>
+        <div id="root"></div>
     </body>
 </html>
